# trafmon

./: .gitignore  ARCHITECTURE.md  LICENSE  README.en.md  README.md  package.json
src/: index.html  main.js  style.css  tooltip.html  tooltip.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  monitor.rs  netproc.rs
