[package]
name = "trafmon"
version = "0.3.0"
edition = "2021"
license = "MIT"

[package.metadata.bundle]
identifier = "com.schweik.trafmon"
icon = ["icons/icon.ico", "icons/icon.png"]

[lib]
name = "trafmon_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
ferrisetw = "1.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
